[package]
name = "goose_DB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
bincode = "2.0.0-rc.3"
serde_json = "1.0.107"
